2.4.10 补全swagger 相关描述
