# internal/model/article.go
@@ -1,5 +1,7 @@
 package model
 
+import "github.com/MiracleWong/go-blog-service/pkg/app"
+
 type Article struct {
 	*Model
 	// 文章标题
@@ -16,4 +18,9 @@ type Article struct {
 
 func (model Article) TableName() string {
 	return "blog_article"
+}
+
+type ArticleSwagger struct {
+	List []*Article
+	Pager *app.Pager
 }
